--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,18 @@
   },
   "type": "symfony-bundle",
   "autoload": {
-    "psr-4": {
-      "": "src/"
+    "psr-0": {
+      "HBM\\DatagridBundle": ""
     }
   },
   "require": {
-    "php": ">=5.6",
-    "ext-mbstring": "*",
     "symfony/symfony": "2.7.*",
     "doctrine/orm": "^2.4.8",
     "doctrine/doctrine-bundle": "~1.4"
-  }
+  },
+  "require-dev": {
+    "php": ">=5.6",
+    "ext-mbstring": "*"
+  },
+  "target-dir": "HBM/Bundle/DatagridBundle"
 }
