--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
   },
   "require": {
     "symfony/symfony": "2.5.*",
-    "doctrine/orm": "^2.4.8",
-    "doctrine/doctrine-bundle": "~1.4"
+    "doctrine/orm": "^2.4.8"
   },
   "require-dev": {
     "php": ">=5.6",
