--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     }
   },
   "require": {
-    "symfony/symfony": "2.5.*",
+    "symfony/symfony": "^2.5.12",
     "doctrine/orm": "^2.4.8"
   },
   "require-dev": {
