--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     }
   },
   "require": {
-    "symfony/symfony": ">=2.5.12||>=3.0.0",
-    "doctrine/orm": ">=2.4.8"
+    "symfony/symfony": ">=3.0.0",
+    "doctrine/orm": ">=2.5.4"
   },
   "require-dev": {
     "php": ">=5.6",
