Unify naming with other bundles.

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
     hbm.datagrid.helper:
         class: HBM\DatagridBundle\Services\DatagridHelper
-        arguments: ["%hbm_datagrid.config%", "@logger"]
+        arguments: ["%hbm_datagrid%", "@logger"]
