Improve search and export handling. Strip tags from export labels.

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
     hbm.helper.datagrid:
         class: HBM\DatagridBundle\Services\DatagridHelper
-        arguments: ["%hbm_datagrid%", "@logger"]
+        arguments: ["%hbm_datagrid%", "@router", "@logger"]
