Make services public.

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,6 @@
 services:
+    _defaults: { public: true }
+
     hbm.helper.datagrid:
         class: HBM\DatagridBundle\Services\DatagridHelper
         arguments: ["%hbm_datagrid%", "@router", "@logger"]
