Adjust composer.json.

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   },
   "require": {
     "php": ">=7.1",
-    "symfony/symfony": "^4.0",
+    "symfony/symfony": "^3.0|^4.0",
     "doctrine/orm": "^2.5",
     "phpoffice/phpexcel": "^1.8",
     "roave/security-advisories": "dev-master"
