--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,9 @@
     "symfony/http-foundation": "^3.0|^4.0",
     "symfony/dependency-injection": "^3.0|^4.0",
     "doctrine/orm": "^2.5",
-    "phpoffice/phpexcel": "^1.8",
     "roave/security-advisories": "dev-master",
-    "psr/log": "^1.0"
+    "psr/log": "^1.0",
+    "phpoffice/phpspreadsheet": "^1.2"
   },
   "require-dev": {
   },
