--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,6 +1,7 @@
 services:
-    _defaults: { public: true }
+    _defaults:
+        public: true
 
     hbm.helper.datagrid:
         class: HBM\DatagridBundle\Services\DatagridHelper
-        arguments: ["%hbm_datagrid%", "@router", "@logger"]
+        arguments: ["%hbm.datagrid%", "@router", "@logger"]
