--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,11 @@
 {
   "name": "burdanews/datagrid-bundle",
   "description": "HBM Datagrid Bundle - List, filter, sort and paginate (query builder) results.",
-  "author" : [{
+  "authors" : [{
     "name" : "Christian Puchinger",
     "email" : "puchinger@burda.com"
   }],
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:burdanews/datagrid-bundle.git"
-  },
   "type": "symfony-bundle",
   "autoload": {
     "psr-0": {
@@ -18,10 +14,12 @@
   },
   "require": {
     "php": ">=7.1",
-    "symfony/config": "^3.0|^4.0",
-    "symfony/routing": "^3.0|^4.0",
-    "symfony/http-foundation": "^3.0|^4.0",
-    "symfony/dependency-injection": "^3.0|^4.0",
+    "ext-json": "*",
+    "symfony/config": "^3.4|^4.2",
+    "symfony/routing": "^3.4|^4.2",
+    "symfony/http-foundation": "^3.4|^4.2",
+    "symfony/http-kernel": "^3.4|^4.2",
+    "symfony/dependency-injection": "^3.4|^4.2",
     "doctrine/orm": "^2.5",
     "psr/log": "^1.0",
     "phpoffice/phpspreadsheet": "^1.2"
