--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   "require": {
     "php": ">=7.3",
     "ext-json": "*",
-    "burdadirect/symfony-bundle-twig-attributes": "dev-master",
+    "burdadirect/symfony-bundle-twig-attributes": "^1.0|dev-master",
     "symfony/config": "^4.4|^5.2",
     "symfony/routing": "^4.4|^5.2",
     "symfony/http-foundation": "^4.4|^5.2",
