--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,12 @@
   "require": {
     "php": ">=7.3",
     "ext-json": "*",
-    "burdadirect/symfony-bundle-twig-attributes": "dev-master",
-    "symfony/config": "^4.4|^5.2",
-    "symfony/routing": "^4.4|^5.2",
-    "symfony/http-foundation": "^4.4|^5.2",
-    "symfony/http-kernel": "^4.4|^5.2",
-    "symfony/dependency-injection": "^4.4|^5.2",
+    "burdadirect/symfony-bundle-twig-attributes": "^1.0",
+    "symfony/config": "^3.4|^4.4",
+    "symfony/routing": "^3.4|^4.4",
+    "symfony/http-foundation": "^3.4|^4.4",
+    "symfony/http-kernel": "^3.4|^4.4",
+    "symfony/dependency-injection": "^3.4|^4.4",
     "doctrine/orm": "^2.5",
     "psr/log": "^1.0",
     "phpoffice/phpspreadsheet": "^1.2"
