--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "ext-json": "*",
     "burdadirect/symfony-bundle-twig-attributes": "dev-master",
     "symfony/config": "^4.4|^5.2",
+    "symfony/form": "^4.4|^5.2",
     "symfony/routing": "^4.4|^5.2",
     "symfony/http-foundation": "^4.4|^5.2",
     "symfony/http-kernel": "^4.4|^5.2",
