--- a/composer.json
+++ b/composer.json
@@ -28,11 +28,12 @@
     "symfony/http-foundation": "^4.4|^5.2",
     "symfony/http-kernel": "^4.4|^5.2",
     "symfony/dependency-injection": "^4.4|^5.2",
-    "doctrine/orm": "^2.5",
     "psr/log": "^1.0",
     "phpoffice/phpspreadsheet": "^1.2"
   },
   "require-dev": {
-    "roave/security-advisories": "dev-master"
+    "roave/security-advisories": "dev-latest",
+    "doctrine/orm": "^2.8",
+    "doctrine/mongodb-odm-bundle": "^4.3"
   }
 }
