--- a/composer.json
+++ b/composer.json
@@ -29,12 +29,12 @@
     "symfony/http-kernel": "^4.4|^5.2",
     "symfony/dependency-injection": "^4.4|^5.2",
     "psr/log": "^1.0",
-    "phpoffice/phpspreadsheet": "^1.2",
-    "doctrine/orm": "^2.7",
-    "doctrine/mongodb-odm-bundle": "^4.3"
+    "phpoffice/phpspreadsheet": "^1.2"
   },
   "require-dev": {
-    "roave/security-advisories": "dev-latest"
+    "roave/security-advisories": "dev-latest",
+    "doctrine/orm": "^2.7",
+    "doctrine/mongodb-odm-bundle": "^4.3"
 
   }
 }
