--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     "symfony/http-kernel": "^4.4|^5.2",
     "symfony/dependency-injection": "^4.4|^5.2",
     "psr/log": "^1.0",
-    "phpoffice/phpspreadsheet": "^1.2"
+    "phpoffice/phpspreadsheet": "^1.2",
+    "twig/twig": "^3.3"
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest",
