--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   "type": "symfony-bundle",
   "autoload": {
     "psr-4": {
-      "HBM\\DatagridBundle\\": ""
+      "HBM\\DatagridBundle\\": "src/"
     }
   },
   "repositories" : [
@@ -22,12 +22,12 @@
     "php": "^7.4.0",
     "ext-json": "*",
     "burdadirect/symfony-bundle-twig-attributes": "dev-main",
-    "symfony/config": "^4.4|^5.2",
-    "symfony/form": "^4.4|^5.2",
-    "symfony/routing": "^4.4|^5.2",
-    "symfony/http-foundation": "^4.4|^5.2",
-    "symfony/http-kernel": "^4.4|^5.2",
-    "symfony/dependency-injection": "^4.4|^5.2",
+    "symfony/config": "^5.4",
+    "symfony/form": "^5.4",
+    "symfony/routing": "^5.4",
+    "symfony/http-foundation": "^5.4",
+    "symfony/http-kernel": "^5.4",
+    "symfony/dependency-injection": "^5.4",
     "psr/log": "^1.0",
     "phpoffice/phpspreadsheet": "^1.2",
     "twig/twig": "^3.3"
