--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
   "require": {
     "php": "^8.2.0",
     "ext-json": "*",
-    "burdadirect/symfony-bundle-twig-attributes": "dev-main",
+    "burdadirect/symfony-bundle-twig-attributes": "^1.4",
     "symfony/config": "^5.4",
     "symfony/form": "^5.4",
     "symfony/routing": "^5.4",
