--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,10 @@
     {
       "type": "vcs",
       "url": "git@github.com:burdadirect/symfony-bundle-twig-attributes.git"
+    },
+    {
+      "type": "vcs",
+      "url": "git@github.com:burdadirect/codestyle.git"
     }
   ],
   "require": {
@@ -33,6 +37,7 @@
     "twig/twig": "^3.3"
   },
   "require-dev": {
+    "burdadirect/codestyle": "dev-main",
     "roave/security-advisories": "dev-latest",
     "doctrine/orm": "^2.7",
     "doctrine/mongodb-odm-bundle": "^4.3"
@@ -40,7 +45,8 @@
   },
   "config": {
     "allow-plugins": {
-      "composer/package-versions-deprecated": true
+      "composer/package-versions-deprecated": true,
+      "phpstan/extension-installer": true
     }
   }
 }
