--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
     "symfony/http-foundation": "^6.3",
     "symfony/http-kernel": "^6.3",
     "symfony/dependency-injection": "^6.3",
-    "psr/log": "^1.0",
+    "psr/log": "^1.0 || ^2 || ^3",
     "phpoffice/phpspreadsheet": "^1.2",
     "twig/twig": "^3.3"
   },
